src/objects/LeanData__Scheduled_Routing_Job__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Config_Settings__c</fullName>
        <label>Config Settings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Cron_Expression__c</fullName>
        <label>Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Csv_Info__c</fullName>
        <label>Csv Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Edge_Name__c</fullName>
        <label>Edge Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Node_Type__c</fullName>
        <label>Node Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Order_By__c</fullName>
        <label>Order By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Query_Limit__c</fullName>
        <label>Query Limit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Deployment</label>
        <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
        <relationshipLabel>Active Deployments</relationshipLabel>
        <relationshipName>Active_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Graph__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Graph</label>
        <referenceTo>LeanData__Routing_Graph__c</referenceTo>
        <relationshipLabel>Routing Graphs</relationshipLabel>
        <relationshipName>Routing_Graphs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Run_Type__c</fullName>
        <label>Run Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Soql_Condition__c</fullName>
        <label>Soql Condition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Time_Offset__c</fullName>
        <label>Time Offset</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__User_Timezone__c</fullName>
        <label>User Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Scheduled Routing Job</label>
    <nameField>
        <label>Scheduled_Routing_Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Routing Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>